# wechat-oa-reader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
docs/: PRD.md  README_zh.md  TECH_SPEC.md
docs/superpowers/specs/: 2026-03-24-weibo-reader-design.md
evals/: cninfo-evals.json  evals.json  zsxq-evals.json
plugins/wechat-oa-reader/.claude-plugin/: plugin.json
plugins/wechat-oa-reader/skills/cninfo-reader/: SKILL.md
plugins/wechat-oa-reader/skills/cninfo-reader/scripts/: _errors.py  download_report.py  list_reports.py  search_company.py
plugins/wechat-oa-reader/skills/wechat-oa-reader/: SKILL.md
plugins/wechat-oa-reader/skills/wechat-oa-reader/scripts/: check_auth.py  login.py
plugins/wechat-oa-reader/skills/weibo-reader/: SKILL.md
plugins/wechat-oa-reader/skills/zsxq-reader/: SKILL.md
skill/: SKILL.md
skill/evals/: evals.json
skill/scripts/: _errors.py  check_auth.py  fetch_article.py  list_articles.py  login.py  search.py
skills/wechat-oa-reader/: SKILL.md
skills/wechat-oa-reader/scripts/: check_install.py  login.py  search.py
src/wechat_oa_reader/: __init__.py  auth.py  cli.py  client.py  cninfo.py  docx_writer.py  fetcher.py  limiter.py  models.py  parser.py  proxy.py  store.py  wecom.py  wecom_callback.py  wecom_crypto.py  wecom_mcp.py  wecom_store.py  weibo.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_client.py  test_cninfo_cli.py  test_cninfo_client.py  test_docx_writer.py  test_limiter.py  test_login_phases.py  test_models.py  test_parser.py  test_proxy.py  test_security.py  test_store.py  test_wecom.py  test_wecom_callback.py  test_wecom_crypto.py  test_wecom_mcp.py  test_wecom_models.py  test_wecom_store.py  test_weibo_cli.py  test_weibo_client.py  test_weibo_models.py  test_zsxq_scripts.py
(+12 files in other folders)
